# Graphics-Experimental-Engine

./: .gitignore  CMakeLists.txt
assets/Meshs/box/: box.mtl  scene.gltf
assets/Meshs/speaker/: scene.gltf
assets/Shaders/: compile.bat  frag.spv  fragment.frag  greenColoredShader.frag  greenColoredShader.spv  triangleShader.spv  triangleShader.vert  vert.spv  vertex.vert
assets/Shaders/boundingBox/: compile.bat  vert.spv  vertex.vert
assets/Shaders/gamma correction/: frag.spv  fragment.frag  vert.spv  vertex.vert
assets/Shaders/pixelPerfect/: frag.spv  fragment.frag  vert.spv  vertex.vert
assets/Shaders/skybox/: fragment.frag  vert.spv  vertex.vert
headers/: AABB.h  AbstractMesh.h  Application.h  BoundingBox.h  Buffer.h  Camera.h  CommandBuffer.h  CommandPool.h  DebugMessenger.h  Device.h  DeviceMemory.h  Drawable.h  EventDispatcher.h  Framebuffer.h  FramebufferBuilder.h  Geometry.h  Gpu.h  Image.h  Instance.h  Material.h  MaterialInstance.h  MemoryLocation.h  Mesh.h  MeshLoader.h  MeshMemoryLocation.h  ModelLoader.h  Optics.h  Pass.h  Pipeline.h  PipelineBuilder.h  PipelineLayout.h  PointLight.h  Query.h  QueryPool.h  Queue.h  QueueFamily.h  RenderTarget.h  Renderer.h  Renderpass.h  RenderpassBuilder.h  (+30 more)
headers/impl/vulkan/: Buffer.h  CommandBuffer.h  CommandPool.h  DebugMessenger.h  Device.h  DeviceMemory.h  Gpu.h  Image.h  Instance.h  Material.h  Pass.h  Pipeline.h  PipelineBuilder.h  PipelineLayout.h  Query.h  QueryPool.h  Queue.h  QueueFamily.h  RenderTarget.h  Renderpass.h  Sampler.h  Shader.h  Signal.h  Swapchain.h  VulkanImGuiContext.h  meshMemoryLocation.h  textureImageFactory.h  vulkanContext.h  vulkanContextBuilder.h  vulkan_utils.h
libs/: .gitattributes  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
libs/GLFW/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
libs/GLFW/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
libs/GLFW/src/Debug/: glfw3ddll.exp  glfw3ddll.lib
libs/SPIRV-Cross/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  SPIRV-Cross.sln  cmake_install.cmake  gitversion.h  spirv-cross-c.vcxproj  spirv-cross-c.vcxproj.filters  spirv-cross-core.vcxproj  spirv-cross-core.vcxproj.filters  spirv-cross-cpp.vcxproj  spirv-cross-cpp.vcxproj.filters  spirv-cross-glsl.vcxproj  spirv-cross-glsl.vcxproj.filters  spirv-cross-hlsl.vcxproj  spirv-cross-hlsl.vcxproj.filters  spirv-cross-msl.vcxproj  spirv-cross-msl.vcxproj.filters  spirv-cross-reflect.vcxproj  spirv-cross-reflect.vcxproj.filters  spirv-cross-util.vcxproj  spirv-cross-util.vcxproj.filters  spirv-cross.vcxproj  spirv-cross.vcxproj.filters  spirv_cross_cConfig.cmake  spirv_cross_coreConfig.cmake  spirv_cross_cppConfig.cmake  spirv_cross_glslConfig.cmake  spirv_cross_hlslConfig.cmake  spirv_cross_mslConfig.cmake  spirv_cross_reflectConfig.cmake  spirv_cross_utilConfig.cmake  spirv_parser.cpp
libs/SPIRV-Cross/Debug/: spirv-cross-cd.lib  spirv-cross-cppd.lib  spirv-cross-reflectd.lib  spirv-cross-utild.lib
libs/Vulkan/1.2.176.1/Lib/: GenericCodeGen.lib  HLSL.lib  MachineIndependent.lib  OGLCompiler.lib  OSDependent.lib  SPIRV-Tools-link.lib  SPIRV-Tools-opt.lib  SPIRV-Tools-reduce.lib  SPIRV-Tools-shared.lib  SPIRV-Tools.lib  SPIRV.lib  SPVRemapper.lib  VkLayer_utils.lib  dxcompiler.lib  glslang.lib  shaderc.lib  shaderc_combined.lib  shaderc_shared.lib  shaderc_util.lib  spirv-cross-c-shared.lib  spirv-cross-c.lib  spirv-cross-core.lib  spirv-cross-cpp.lib  spirv-cross-glsl.lib  spirv-cross-hlsl.lib  spirv-cross-msl.lib  spirv-cross-reflect.lib  spirv-cross-util.lib
libs/Vulkan/1.2.176.1/Lib32/: GenericCodeGen.lib  HLSL.lib  MachineIndependent.lib  OGLCompiler.lib  OSDependent.lib  SPIRV-Tools-link.lib  SPIRV-Tools-opt.lib  SPIRV-Tools-reduce.lib  SPIRV-Tools-shared.lib  SPIRV-Tools.lib  (+18 more)
libs/assimp/: ALL_BUILD.vcxproj  Assimp.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj.filters  assimp.pc  assimpTargets-debug.cmake  assimpTargets-release.cmake  cmake_install.cmake  cmake_uninstall.cmake  revision.h  uninstall.vcxproj  uninstall.vcxproj.filters
libs/assimp/code/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp.vcxproj  assimp.vcxproj.filters  cmake_install.cmake
libs/assimp/contrib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
libs/assimp/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  unit.vcxproj  unit.vcxproj.filters
libs/glm/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  glm.sln
libs/glm/glm/: INSTALL.vcxproj  INSTALL.vcxproj.filters  glm_shared.vcxproj  glm_shared.vcxproj.filters  glm_static.vcxproj
libs/glm/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters
sources/: AABB.cpp  Application.cpp  BoundingBox.cpp  Buffer.cpp  Camera.cpp  CommandBuffer.cpp  CommandPool.cpp  DebugMessenger.cpp  Device.cpp  DeviceMemory.cpp  Drawable.cpp  EventDispatcher.cpp  Framebuffer.cpp  Geometry.cpp  Gpu.cpp  Image.cpp  Instance.cpp  Material.cpp  MemoryLocation.cpp  Mesh.cpp  MeshLoader.cpp  MeshMemoryLocation.cpp  ModelLoader.cpp  Optics.cpp  Pass.cpp  Pipeline.cpp  PipelineBuilder.cpp  PipelineLayout.cpp  PointLight.cpp  Query.cpp  QueryPool.cpp  Queue.cpp  QueueFamily.cpp  RenderTarget.cpp  Renderer.cpp  Renderpass.cpp  RenderpassBuilder.cpp  ResourceHolder.cpp  Shader.cpp  ShaderEffect.cpp  (+22 more)
sources/impl/vulkan/: Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  DebugMessenger.cpp  Device.cpp  DeviceMemory.cpp  Gpu.cpp  Image.cpp  Instance.cpp  Material.cpp  Pass.cpp  Pipeline.cpp  PipelineBuilder.cpp  PipelineLayout.cpp  Query.cpp  QueryPool.cpp  Queue.cpp  QueueFamily.cpp  RenderTarget.cpp  Renderpass.cpp  Shader.cpp  Signal.cpp  Swapchain.cpp  VulkanImGuiContext.cpp  meshMemoryLocation.cpp  textureImageFactory.cpp  vulkanContext.cpp  vulkanContextBuilder.cpp  vulkan_utils.cpp
(+1443 files in other folders)
